--- a/Python_Basics_II.ipynb
+++ b/Python_Basics_II.ipynb
@@ -6,8 +6,7 @@
       "name": "Python Basics II",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPhB4FJTFr7GaIMRDe13nX9",
+      "authorship_tag": "ABX9TyNz3dLMGVYBeBH0P4RyrGtu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/saffarizadeh/INSY4054/blob/main/Python_Basics_II.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/saffarizadeh/BUAN4061/blob/main/Python_Basics_II.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -92,7 +91,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "61EO87bc-wq1",
-        "outputId": "1f1278f8-abf4-40e9-f9b2-d18e2cba04ac"
+        "outputId": "6d06ee92-0614-4306-8fa1-ecd33d5effe2"
       },
       "source": [
         "45 == 45"
@@ -106,10 +105,8 @@
               "True"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 15
+          "metadata": {},
+          "execution_count": 1
         }
       ]
     },
@@ -120,7 +117,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y9EmOW14-0Pd",
-        "outputId": "3223a44c-a555-4575-962d-853a4029ff1b"
+        "outputId": "c8c0c7a1-a6a5-4408-a56e-0cd57784b7fb"
       },
       "source": [
         "45 == 543"
@@ -134,10 +131,8 @@
               "False"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     },
@@ -148,7 +143,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ums375u_-2Nu",
-        "outputId": "9658aa20-7b41-45c7-f92e-07df138fd1df"
+        "outputId": "3ba63332-43ab-42bd-8bab-7ad53d1776aa"
       },
       "source": [
         "2 != 3"
@@ -162,10 +157,8 @@
               "True"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     },
@@ -176,7 +169,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kAIUbyBf-3x7",
-        "outputId": "4f7d2391-dc7c-4921-a174-d54b39585fa3"
+        "outputId": "df4fa076-06c3-41e1-e1fb-1964f10e0601"
       },
       "source": [
         "5 != 5"
@@ -190,10 +183,8 @@
               "False"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
+          "metadata": {},
+          "execution_count": 4
         }
       ]
     },
@@ -204,7 +195,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TbSUJLhG-5Dd",
-        "outputId": "aab9ca3c-c677-4a65-8ea9-9401a98ca2cc"
+        "outputId": "288e96a9-2c65-4a3c-c408-3bb4a5d098cf"
       },
       "source": [
         "'Hello' == 'Hello'"
@@ -218,10 +209,8 @@
               "True"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
+          "metadata": {},
+          "execution_count": 5
         }
       ]
     },
@@ -232,7 +221,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DWU7NOxm-9FZ",
-        "outputId": "e41cf1db-b2b3-4688-c3d1-728a0561e560"
+        "outputId": "406f2342-312a-4a0d-ea8a-69a8fcdd9c8a"
       },
       "source": [
         "'Hello' != 'hello'"
@@ -246,10 +235,8 @@
               "True"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     },
@@ -260,7 +247,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pKF4nH-C_C3V",
-        "outputId": "788832f8-0f65-45fc-a9b2-3eb22a298a9c"
+        "outputId": "91d390ef-75f3-4154-b5d1-766a88bfc0ff"
       },
       "source": [
         "42 == '42'"
@@ -274,10 +261,8 @@
               "False"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
+          "metadata": {},
+          "execution_count": 7
         }
       ]
     },
@@ -288,7 +273,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BI-FHm-v_Hwt",
-        "outputId": "fa350a10-a670-4333-c4dc-27d5d1c7c4a9"
+        "outputId": "c1b3f38c-fbe9-4b84-b764-568bea49de1d"
       },
       "source": [
         "45 < 400"
@@ -302,10 +287,8 @@
               "True"
             ]
           },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 11
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     },
@@ -325,7 +308,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u6TevLsU_qNU",
-        "outputId": "fb2b0995-0999-41ac-ad84-ce679c61a9c7"
+        "outputId": "a4d37885-8e64-42ad-8fda-65c0d7ee73d2"
       },
       "source": [
         "x = 5\n",
@@ -337,13 +320,54 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "5\n",
             "False\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Truth table for `and` and `or`\n",
+        "<table>\n",
+        "<tr>\n",
+        "<td><b>A</b></td>\n",
+        "<td><b>B</b></td>\n",
+        "<td><b>A and B</b></td>\n",
+        "<td><b>A or B</b></td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>False</td>\n",
+        "<td>False</td>\n",
+        "<td>False</td>\n",
+        "<td><i>False</i></td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>False</td>\n",
+        "<td>True</td>\n",
+        "<td>False</td>\n",
+        "<td>True</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>True</td>\n",
+        "<td>False</td>\n",
+        "<td>False</td>\n",
+        "<td>True</td>\n",
+        "</tr>\n",
+        "<tr>\n",
+        "<td>True</td>\n",
+        "<td>True</td>\n",
+        "<td>True</td>\n",
+        "<td><i>True</i></td>\n",
+        "</tr>\n",
+        "</table>"
+      ],
+      "metadata": {
+        "id": "McyRuR76qLl6"
+      }
     },
     {
       "cell_type": "code",
@@ -352,7 +376,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m9Kcfxy4_qGZ",
-        "outputId": "fbdfc418-ed89-4272-f659-742199ebf9ae"
+        "outputId": "0196afbf-8149-49db-9371-1d00c29ad9b3"
       },
       "source": [
         "done = True\n",
@@ -367,14 +391,14 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "<class 'bool'>\n",
             "False\n",
             "True\n",
             "False\n",
             "True\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -396,7 +420,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "izbztOqFbNFk",
-        "outputId": "94b2d61a-7709-467b-8c34-74267950ef56"
+        "outputId": "ac914d62-1088-4f39-da3d-d597694e0a92"
       },
       "source": [
         "done = True\n",
@@ -408,10 +432,10 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "It is done!\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -432,7 +456,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DLpxUqiobwOO",
-        "outputId": "1ecb0dc7-066c-4c50-cf81-f140284287c4"
+        "outputId": "46789238-0c52-47ea-a22f-12eda6a4873b"
       },
       "source": [
         "x = 10\n",
@@ -444,10 +468,10 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "The value of x is greater than 5.\n"
-          ],
-          "name": "stdout"
+            "The value of x is larger than 5.\n"
+          ]
         }
       ]
     },
@@ -467,7 +491,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DkLz0dwucIwU",
-        "outputId": "86ec388d-65fe-489d-9a74-3c9fd553d51a"
+        "outputId": "87070cf6-d14b-4a24-fea5-f30efcc33550"
       },
       "source": [
         "x = 2\n",
@@ -481,10 +505,10 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "The value of x is less than or equal to 5.\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -495,7 +519,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "baKfiLINbawT",
-        "outputId": "165eb65b-65b0-4164-f255-4f019c8b0c9a"
+        "outputId": "c922c344-e6a7-47a3-98c2-822f6b242165"
       },
       "source": [
         "x = 5\n",
@@ -511,34 +535,12 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "The value of x is less than or equal to 5.\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yZz-B-xQbatr"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ma2U3rVSbaq2"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -558,7 +560,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e7336a54-8d86-42d8-a424-1f299d889ebf"
+        "outputId": "80de88c0-85be-4514-edb3-ccb68c99a5db"
       },
       "source": [
         "items = [\"First Item\", \"Second Item\", \"Thrid Item\"]\n",
@@ -570,12 +572,12 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "First Item\n",
             "Second Item\n",
             "Thrid Item\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -604,7 +606,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wvnpQWOyeCkO",
-        "outputId": "7fffcf68-7da9-488b-afca-103c17e1603f"
+        "outputId": "b4500e35-569e-49b8-ed83-fb4417aab45b"
       },
       "source": [
         "for i in range(5):\n",
@@ -614,14 +616,14 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "0\n",
             "1\n",
             "2\n",
             "3\n",
             "4\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -641,7 +643,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w8TUWwfseT4P",
-        "outputId": "51e7b768-e4ba-4bdf-8d10-f41970e2a5ac"
+        "outputId": "cd2bd722-23c3-4638-9b26-0ccb38e49853"
       },
       "source": [
         "my_list = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
@@ -654,10 +656,10 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[2, 4, 6, 8]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -702,7 +704,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sUzbs1gShMSb",
-        "outputId": "4da605e2-37e6-4a15-d621-3c087145bdcc"
+        "outputId": "3a9d64a4-7424-4e53-a9f5-95d0179260d2"
       },
       "source": [
         "print_odd_numbers()"
@@ -711,14 +713,14 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1\n",
             "3\n",
             "5\n",
             "7\n",
             "9\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -754,7 +756,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "idl_yw6sMjR3",
-        "outputId": "a4983153-623f-4f38-f5d0-1d129a108f71"
+        "outputId": "18a90fcf-935b-4dfe-c2ce-7def0ec5d101"
       },
       "source": [
         "odd_numbers = odd_numbers_in_range(5, 14)\n",
@@ -765,34 +767,12 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[5, 7, 9, 11, 13]\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oRs4xXmdMjKg"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oi98mxKbNrgp"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -816,7 +796,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0sJB44kvkQgx",
-        "outputId": "9dd71c01-5c46-4777-f4fa-13b724ba0cd3"
+        "outputId": "5edc6b48-97c4-4d96-b825-341ad14f71a3"
       },
       "source": [
         "def square(number):\n",
@@ -829,10 +809,10 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "25\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -852,7 +832,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CK6IrogrkqpH",
-        "outputId": "ce3e80c3-a47a-4887-9f5a-e88debe0cb1d"
+        "outputId": "3dc56053-9cc0-4523-f104-aba8380eb68d"
       },
       "source": [
         "square = lambda number: number * number\n",
@@ -864,34 +844,12 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "25\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "P1VxprGQk8Im"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rN5PxXTAlDoo"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
