--- a/DeepFake_Advanced.ipynb
+++ b/DeepFake_Advanced.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "DeepFake-Advanced.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -54,6 +53,28 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install imageio-ffmpeg"
+      ],
+      "metadata": {
+        "id": "3kWB8o09k_tE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install \"pyyaml==5.3\""
+      ],
+      "metadata": {
+        "id": "14UcOnP5lAD2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "aCu4TJO6UVLY"
       },
@@ -68,19 +89,31 @@
         "import requests\n",
         "import numpy as np"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pVQvGsoQ5Cvt"
+        "id": "pVQvGsoQ5Cvt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bb40e459-4bd6-4f34-f6c3-20b7f70de801"
       },
       "source": [
         "cd /content"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -102,7 +135,7 @@
         "image_url = \"https://www.saffarizadeh.com/ET/DF/statue-01.png\" #@param @param [\"https://www.saffarizadeh.com/ET/DF/statue-01.png\", \"https://www.saffarizadeh.com/ET/DF/statue-02.png\", \"https://www.saffarizadeh.com/ET/DF/statue-03.png\", \"https://www.saffarizadeh.com/ET/DF/statue-04.png\"]\n",
         "source_image = imageio.imread(image_url)"
       ],
-      "execution_count": 164,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -181,7 +214,7 @@
         "  x, y, w, h = list(faces[0])\n",
         "  return (y, y+h, x, x+w)"
       ],
-      "execution_count": 215,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -205,7 +238,7 @@
         "\n",
         "source_image = resize(source_image, (256, 256))[..., :3] # Here by using \":3\" we are getting rid of the 4th channel of the image (if the image is a PNG)"
       ],
-      "execution_count": 216,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -247,7 +280,7 @@
       "source": [
         "video_file_name = list(uploaded_video.keys())[0]"
       ],
-      "execution_count": 195,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -267,7 +300,7 @@
       "source": [
         "reader = imageio.get_reader(video_file_name)"
       ],
-      "execution_count": 196,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -287,7 +320,7 @@
       "source": [
         "fps = reader.get_meta_data()['fps']"
       ],
-      "execution_count": 197,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -305,10 +338,10 @@
         "id": "ELPEVHXDZM5e"
       },
       "source": [
-        "driving_video = list(reader)\n",
+        "driving_video = [frame for frame in reader]\n",
         "reader.close()"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -336,7 +369,7 @@
         "  cropped = frame[y1:y2, x1:x2]\n",
         "  cropped_video.append(resize(cropped, (256, 256))[..., :3])"
       ],
-      "execution_count": 206,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -399,7 +432,7 @@
         "from demo import load_checkpoints\n",
         "generator, kp_detector = load_checkpoints(config_path='config/vox-256.yaml', checkpoint_path='deep_animator_model.pth.tar')"
       ],
-      "execution_count": 203,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -472,7 +505,7 @@
         "    plt.close()\n",
         "    return ani"
       ],
-      "execution_count": 219,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -527,7 +560,7 @@
         "_ = subprocess.call(f'ffmpeg -i {video_file_name} -f mp3 audio.mp3', shell=True)\n",
         "_ = subprocess.call('ffmpeg -i generated.mp4 -i audio.mp3 -strict -2 -f mp4 generated_with_audio.mp4', shell=True)"
       ],
-      "execution_count": 223,
+      "execution_count": null,
       "outputs": []
     },
     {
