--- a/Web_Scraping.ipynb
+++ b/Web_Scraping.ipynb
@@ -3,10 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Web Scraping.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPSbmyl6BgSVTZztd2LDGcp",
+      "authorship_tag": "ABX9TyMEzki06idDhX2HNkEP7EeR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +59,7 @@
       },
       "source": [
         "## Using BeautifulSoup\n",
-        " \n",
+        "\n",
         "Learn more about BeautifulSoup: https://www.crummy.com/software/BeautifulSoup/bs4/doc/\n",
         "\n",
         "BeautifulSoup is typically considered to be much simpler that XPath. While with XPath you can achieve a lot by just writing a short line of code, writing that line of code is often very challenging if you don't understand XPath rules well. But with BeautifulSoup your code is typically longer but much more Pytonic (therefore, much easier to understand and modify)."
@@ -327,7 +325,7 @@
         "id": "DD9d0lvIsa_Q"
       },
       "source": [
-        "## How can we leverage alt text of the images as possible labels for supervised machine learning "
+        "## How can we leverage alt text of the images as possible labels for supervised machine learning"
       ]
     },
     {
@@ -371,7 +369,7 @@
         "id": "-YTRo-m0tK_8"
       },
       "source": [
-        "df = pd.DataFrame(image_alt_pairs, columns={\"image_url\", \"image_alt\"})\n",
+        "df = pd.DataFrame(image_alt_pairs, columns=[\"image_url\", \"image_alt\"])\n",
         "df"
       ],
       "execution_count": null,
@@ -1049,9 +1047,7 @@
       "metadata": {
         "id": "SQgAYiYmOI1M"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
