--- a/LangChain_and_OpenAI_GPT.ipynb
+++ b/LangChain_and_OpenAI_GPT.ipynb
@@ -69,7 +69,7 @@
       "source": [
         "import os\n",
         "\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+        "os.environ[\"OPENAI_API_KEY\"] = \"PUT YOUR OPENAI API KEY HERE\""
       ],
       "metadata": {
         "id": "dNA4TsHpu6OM"
