--- a/DeepFake_Advanced.ipynb
+++ b/DeepFake_Advanced.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +53,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install imageio-ffmpeg"
+        "!pip install ffmpeg-python"
       ],
       "metadata": {
         "id": "3kWB8o09k_tE"
@@ -89,7 +88,7 @@
         "import requests\n",
         "import numpy as np"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +103,7 @@
       "source": [
         "cd /content"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +134,7 @@
         "image_url = \"https://www.saffarizadeh.com/ET/DF/statue-01.png\" #@param @param [\"https://www.saffarizadeh.com/ET/DF/statue-01.png\", \"https://www.saffarizadeh.com/ET/DF/statue-02.png\", \"https://www.saffarizadeh.com/ET/DF/statue-03.png\", \"https://www.saffarizadeh.com/ET/DF/statue-04.png\"]\n",
         "source_image = imageio.imread(image_url)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -214,7 +213,7 @@
         "  x, y, w, h = list(faces[0])\n",
         "  return (y, y+h, x, x+w)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +237,7 @@
         "\n",
         "source_image = resize(source_image, (256, 256))[..., :3] # Here by using \":3\" we are getting rid of the 4th channel of the image (if the image is a PNG)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -280,7 +279,7 @@
       "source": [
         "video_file_name = list(uploaded_video.keys())[0]"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -300,7 +299,7 @@
       "source": [
         "reader = imageio.get_reader(video_file_name)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +319,7 @@
       "source": [
         "fps = reader.get_meta_data()['fps']"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +340,7 @@
         "driving_video = [frame for frame in reader]\n",
         "reader.close()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -369,7 +368,7 @@
         "  cropped = frame[y1:y2, x1:x2]\n",
         "  cropped_video.append(resize(cropped, (256, 256))[..., :3])"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -505,7 +504,7 @@
         "    plt.close()\n",
         "    return ani"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
