--- a/Object_Detection.ipynb
+++ b/Object_Detection.ipynb
@@ -3,10 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Object Detection",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMw7KcIBkn24v6t0Hnrovk2",
+      "authorship_tag": "ABX9TyMaX7FzxK6w8RtuNxD+WNSc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +46,7 @@
         "id": "HXGh7t8Bo2t0"
       },
       "source": [
-        "Source: https://tfhub.dev/google/faster_rcnn/openimages_v4/inception_resnet_v2/1\n",
+        "Source: https://www.kaggle.com/models/google/faster-rcnn-inception-resnet-v2/frameworks/tensorFlow1/variations/faster-rcnn-openimages-v4-inception-resnet-v2/versions/1\n",
         "\n",
         "Read the complete tutorial: https://www.tensorflow.org/hub/tutorials/tf2_object_detection"
       ]
@@ -75,65 +73,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "a-9hsIWJopDP",
-        "outputId": "91837599-beef-42c7-95c3-96afaa81ab88"
+        "id": "a-9hsIWJopDP"
       },
       "source": [
-        "detector = hub.load(\"https://tfhub.dev/google/faster_rcnn/openimages_v4/inception_resnet_v2/1\").signatures['default']"
+        "detector = hub.load(\"https://www.kaggle.com/models/google/faster-rcnn-inception-resnet-v2/frameworks/tensorFlow1/variations/faster-rcnn-openimages-v4-inception-resnet-v2/versions/1\").signatures['default']"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vup0pSDjo6zs",
-        "outputId": "5cc13e8b-e319-4411-edc2-a55aa27edf14"
+        "id": "vup0pSDjo6zs"
       },
       "source": [
         "!wget https://upload.wikimedia.org/wikipedia/commons/6/60/Naxos_Taverna.jpg"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "--2021-02-22 16:49:10--  https://upload.wikimedia.org/wikipedia/commons/6/60/Naxos_Taverna.jpg\n",
-            "Resolving upload.wikimedia.org (upload.wikimedia.org)... 208.80.154.240, 2620:0:861:ed1a::2:b\n",
-            "Connecting to upload.wikimedia.org (upload.wikimedia.org)|208.80.154.240|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 779201 (761K) [image/jpeg]\n",
-            "Saving to: ‘Naxos_Taverna.jpg’\n",
-            "\n",
-            "\rNaxos_Taverna.jpg     0%[                    ]       0  --.-KB/s               \rNaxos_Taverna.jpg   100%[===================>] 760.94K  --.-KB/s    in 0.07s   \n",
-            "\n",
-            "2021-02-22 16:49:10 (10.6 MB/s) - ‘Naxos_Taverna.jpg’ saved [779201/779201]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -352,9 +309,7 @@
       "metadata": {
         "id": "TFrtDfdxpcrw"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
