--- a/DeepFake_Advanced.ipynb
+++ b/DeepFake_Advanced.ipynb
@@ -63,17 +63,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install \"pyyaml==5.3\""
-      ],
-      "metadata": {
-        "id": "14UcOnP5lAD2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "id": "aCu4TJO6UVLY"
       },
@@ -417,7 +406,7 @@
         "id": "E-d_eX70ZFWn"
       },
       "source": [
-        "!gdown --id 1P27UddNfwV_NNbQqB40RkCPDaYnb9jwc"
+        "!gdown --id 1P27UddNfwV_NNbQqB40RkCPDaYnb9jwc # !wget https://saffarizadeh.com/ET/deep_animator_model.pth.tar"
       ],
       "execution_count": null,
       "outputs": []
